# go-probe-ebpf

./: .gitmodules  CMakeLists.txt  main.cpp
api/: api.h  config.h
client/: smith_client.cpp  smith_client.h  smith_message.cpp  smith_message.h  smith_probe.cpp  smith_probe.h
ebpf/: Makefile  probe.bpf.c  probe.h  type.h
ebpf/src/: config.h  event.h  macro.h  probe.bpf.c  stringify.h  trace.h  type.h
go/symbol/: build_info.cpp  build_info.h  line_table.cpp  line_table.h
